feat: update rest client

--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,9 @@
   },
   "require": {
     "php": "^7.4|^8.0",
-    "bytic/rest-client": "dev-develop",
-    "bytic/collections": "^1.0"
+    "bytic/rest-client": "dev-master|dev-develop|^1.0",
+    "bytic/collections": "^1.0",
+    "nyholm/psr7": "^1.8"
   },
   "require-dev": {
     "bytic/phpqatools": "^1.0",
@@ -37,7 +38,8 @@
       "phpstan/extension-installer": true,
       "ergebnis/composer-normalize": true,
       "dealerdirect/phpcodesniffer-composer-installer": true,
-      "bytic/phpqatools": true
+      "bytic/phpqatools": true,
+      "php-http/discovery": true
     }
   }
 }
